# DocuMind-The-Agentic-Intelligent-Document-Auditor

./: .gitignore  README.md  app.py  fix_reqs.py  main.py  mlflow.db  params.yaml  pyproject.toml  requirements.txt  schema.yaml  streamlit_app.py  template.py  test.py  test_agent.py  test_inference.py
config/: config.yaml  configuration.py
src/documind/: __init__.py
src/documind/components/: agent_tools.py  data_ingestion.py  data_transformation.py  data_validation.py  llm_engine.py  model_evaluation.py  model_trainer.py
src/documind/config/: configuration.py
src/documind/entity/: __init__.py  api_models.py
src/documind/pipeline/: agent_pipeline.py  prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/documind/utils/: common.py
